# MyRtos_ARM

./: .gitignore  CMakeLists.txt  arm-gcc-toolchain.cmake  linker.ld  main.c  run.resc  startup.c  toolchain.cmake  uart.h
basic_drivers/: hfclk.c  hfclk.h  lfclk.c  lfclk.h  rtc_tick.c  rtc_tick.h  uart.c
